--- a/custom_components/gree_ac_ir/manifest.json
+++ b/custom_components/gree_ac_ir/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "gree_ac",
+  "domain": "gree_ac_ir",
   "name": "Gree AC IR",
   "codeowners": ["@aramcap"],
   "config_flow": true,
